--- a/lib/assets/javascripts/cartodb/dashboard/views/filters.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/filters.jst.ejs
@@ -36,11 +36,14 @@
               <% } %>
             </a>
           </li>
+          <% if (isMaps) { %>
           <li class="Filters-typeItem">
             <a class="Filters-typeLink js-link <%- samples ? 'is-selected' : '' %>" href="<%- currentDashboardUrl.sampleItems() %>">
               Samples
             </a>
           </li>
+          <% } %>
+
           <% if (!isMaps) { %>
             <li class="Filters-typeItem">
               <a class="Filters-typeLink js-link <%- library ? 'is-selected' : '' %>" href="<%- currentDashboardUrl.dataLibrary() %>">
