samples - wakeup case

--- a/lib/assets/javascripts/cartodb/dashboard/views/filters.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/filters.jst.ejs
@@ -11,7 +11,7 @@
 
         <ul class="Filters-group js-links-list">
           <li class="Filters-typeItem">
-            <a href="<%- currentDashboardUrl %>" class="Filters-typeLink js-link <%- shared === "no" && !liked && !library ? 'is-selected' : '' %>">
+            <a href="<%- currentDashboardUrl %>" class="Filters-typeLink js-link <%- shared === "no" && !liked && !library && !samples? 'is-selected' : '' %>">
               <%- contentTypeTitle %>
               <% if (totalItems) { %>
                 <strong>(<%- totalItems %>)</strong>
