--- a/lib/assets/javascripts/cartodb/dashboard/views/maps_item.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/maps_item.jst.ejs
@@ -10,9 +10,12 @@
         <h3 class="MapCard-title DefaultTitle u-ellipsLongText">
           <a class="DefaultTitle-link" title="<%- name %>" href="<%- url %>"><%- name %></a>
         </h3>
-        <a href="<%- url %>" class="MapCard-editButton CDB-IconFont CDB-IconFont-pencil" title="<%- name %>"></a>
-        <% if (showPermissionIndicator) { %>
-          <span class="PermissionIndicator MapCard-itemTitlePermission">READ</span>
+        <% if (!sample) { %>
+          <a href="<%- url %>" class="MapCard-editButton CDB-IconFont CDB-IconFont-pencil" title="<%- name %>"></a>
+          
+          <% if (showPermissionIndicator) { %>
+            <span class="PermissionIndicator MapCard-itemTitlePermission">READ</span>
+          <% } %>
         <% } %>
       </div>
 
@@ -29,7 +32,7 @@
         <div class="MapCard-contentFooterTimeDiff DefaultTimeDiff">
           <i class="CDB-IconFont CDB-IconFont-clock DefaultTimeDiff-icon"></i>
           <%- timeDiff %>
-          <% if (!isOwner) { %>
+          <% if ((!isOwner) && (!sample)) { %>
             by
             <span class="UserAvatar" data-title="<%- owner.name || owner.username  %>">
               <img class="UserAvatar-img UserAvatar-img--smaller" src="<%- owner.avatar_url %>" />
@@ -38,7 +41,9 @@
         </div>
       </div>
       <div class="MapCard-contentFooterDetails--right">
+      <% if (!sample) { %>
         <span class="js-likes-indicator" />
+      <% } %>  
       </div>
     </div>
   </div>
