samples - demo checkpoint

--- a/app/views/admin/shared/_dashboard_header.erb
+++ b/app/views/admin/shared/_dashboard_header.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="Header-settings">
-      <% if current_user.has_feature_flag?('bbg_profile_menu') %>
+      <% if false %>
       <ul class="Header-settingsList">
         <li class="Header-settingsItem u-hideOnMobile">
           <a href="<%= maps_index_path %>" class="Header-settingsLink">Maps</a>
@@ -42,6 +42,17 @@
           <button class="UserAvatar js-settings-dropdown">
               <img src="<%= current_user.avatar %>" class='UserAvatar-img UserAvatar-img--medium' />
           </button>
+        </li>
+      </ul>
+      <% end %>
+
+      <% if current_user.has_feature_flag?('bbg_profile_menu')%>
+      <ul class="Header-settingsList">
+        <li class="Header-settingsItem u-hideOnMobile">
+        Map Title
+        </li>
+        <li class="Header-settingsItem u-hideOnMobile">
+          <a href="<%= maps_index_path %>" class="Header-settingsLink">Tornado Alley</a>
         </li>
       </ul>
       <% end %>
