--- a/app/views/admin/visualizations/public_map.html.erb
+++ b/app/views/admin/visualizations/public_map.html.erb
@@ -30,6 +30,7 @@
       </ul>
     </div>
 
+    <% if false %>
     <div class="Navmenu js-Navmenu">
       <div class="u-inner">
         <div class="PublicMap-block">
@@ -126,6 +127,7 @@
         </div>
       </div>
     </div>
+    
 
     <div class="PublicMap-secondary">
       <div class="u-inner">
@@ -229,6 +231,7 @@
           </ul>
         </div>
       </div>
+      
 
       <%# DISQUS %>
       <div class="u-inner">
@@ -288,6 +291,7 @@
             </li>
           <% end %>
         </ul>
+      <% end %>
       <% end %>
     </div>
 
