--- a/lib/assets/javascripts/cartodb/public_common/user_settings_template.jst.ejs
+++ b/lib/assets/javascripts/cartodb/public_common/user_settings_template.jst.ejs
@@ -1,13 +1,15 @@
 <li class="Header-settingsItem u-hideOnTablet">
-  <a href="<%- mapsUrl %>" class="Header-settingsLink">Maps</a>
+  Map Title
 </li>
 
 <li class="Header-settingsItem u-hideOnTablet">
-  <a href="<%- datasetsUrl %>" class="Header-settingsLink">Datasets</a>
+  International Factories
 </li>
 
+<!--
 <li class="Header-settingsItem Header-settingsItem--avatar">
   <button class="UserAvatar js-dropdown-target">
     <img src="<%- avatarUrl %>" class="UserAvatar-img UserAvatar-img--medium js-user-avatar-img" />
   </button>
 </li>
+-->
