--- a/app/views/admin/shared/_private_header.erb
+++ b/app/views/admin/shared/_private_header.erb
@@ -17,6 +17,7 @@
       </ul>
     </div>
     <div class="Header-settings">
+      <% if current_user.has_feature_flag?('bbg_profile_menu') %>
       <ul class="Header-settingsList">
         <% unless cartodb_com_hosted? %>
         <li class="Header-settingsItem">
@@ -37,6 +38,7 @@
           </button>
         </li>
       </ul>
+      <% end %>
     </div>
   </div>
 </div>
