--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <% if ( ( controller_name != "visualizations" && controller_name != "tables" )  || action_name != "show" ) %>
       <%= render 'admin/shared/private_header' %>
 
-      <% if false %>
+      <% if current_user.notification.present? %>
         <div class="FlashMessage">
           <div class="u-inner">
             <p class="FlashMessage-info"><%= raw current_user.notification %></p>
