--- a/app/views/layouts/public_dashboard.html.erb
+++ b/app/views/layouts/public_dashboard.html.erb
@@ -33,7 +33,7 @@
 
     <% if @is_org %>
       <%= render "shared/public_dashboard_org_header" %>
-    <% else if false%>
+    <% else %>
       <%= render "shared/public_dashboard_user_header" %>
     <% end %>
 
