--- a/app/views/admin/shared/_sample_header.html.erb
+++ b/app/views/admin/shared/_sample_header.html.erb
@@ -11,22 +11,14 @@
       </ul>
     </div>
 
-    <div class="Header-settings">
-      <% if !current_user || current_user.has_feature_flag?('bbg_profile_menu') %>
+    <div class="Header-title">
       <ul class="Header-settingsList js-user-settings">
         <li class="Header-settingsItem js-login">
-          <a href="<%= login_url %>" class="Header-settingsLink">Login</a>
+          Title
         </li>
-
-        <% unless cartodb_com_hosted? %>
-          <li class="Header-settingsItem">
-            <a href="http://cartodb.com/signup" class="PublicButton PublicButton--sMedium PublicButton--cWhite is-hover">
-              <span>Sign up</span>
-            </a>
-          </li>
-        <% end %>
-      </ul>
-      <% end %>
+        <li class="Header-settingsItem js-login">
+          <%= @visualization.name %>
+        </li>
     </div>
   </div>
 </div>
