save map feature from samples

--- a/app/views/admin/shared/_sample_header.html.erb
+++ b/app/views/admin/shared/_sample_header.html.erb
@@ -3,7 +3,7 @@
     <div class="Header-navigation">
       <ul class="Header-navigationList">
           <li class="smaller strong tab button">
-            <a href="<%= CartoDB.url(self, 'root') %>" class="Header-navigationLink">Save a Copy to Make Changes</a>
+            <a href="#/save-map" class="Header-navigationLink js-save_map">Save a Copy to Make Changes</a>
           </li>
           <li class="smaller strong tab button">
             <a href="<%= CartoDB.url(self, 'maps_samples') %>" class="Header-navigationLink">Back to Map Library</a>
