--- a/lib/assets/javascripts/cartodb/public_common/user_settings_template.jst.ejs
+++ b/lib/assets/javascripts/cartodb/public_common/user_settings_template.jst.ejs
@@ -6,10 +6,9 @@
   International Factories
 </li>
 
-<!--
+
 <li class="Header-settingsItem Header-settingsItem--avatar">
-  <button class="UserAvatar js-dropdown-target">
+  <button class="UserAvatar js-save-map">
     <img src="<%- avatarUrl %>" class="UserAvatar-img UserAvatar-img--medium js-user-avatar-img" />
   </button>
 </li>
--->
