Add progress dialog

--- a/app/views/admin/visualizations/sample_map.html.erb
+++ b/app/views/admin/visualizations/sample_map.html.erb
@@ -145,7 +145,7 @@
 
   </script>
 
-  <%= javascript_include_tag 'cdb.js', 'models.js', 'templates.js', 'public_map_deps', 'public_map'  %>
+  <%= javascript_include_tag 'cdb.js', 'models.js', 'templates.js', 'public_map_deps', 'dashboard_deps', 'public_map'  %>
 
   <script>
 
