restructre the sample ui

--- a/app/views/admin/shared/_sample_header.html.erb
+++ b/app/views/admin/shared/_sample_header.html.erb
@@ -1,8 +1,6 @@
-<div class="Header" id="header">
-  <div class="u-inner Header-inner">
-       <div class="Header-title">
-      <ul class="Header-settingsList js-user-settings">
-      </ul>
+<header class="vis" id="header">
+  <div class="inner map_toolbar">
+    <div class="header_content js-user-settings">
     </div>
   </div>
-</div>
+</header>
