--- a/lib/assets/javascripts/cartodb/public_common/sample_settings_template.jst.ejs
+++ b/lib/assets/javascripts/cartodb/public_common/sample_settings_template.jst.ejs
@@ -1,15 +1,21 @@
-<li class="smaller strong tab button">
-<a href="#/save-map" class="Header-settingsItem js-save-map">Save a Copy to Make Changes</a>
-</li>
-<li class="smaller strong tab button">
-<a href="<%- dashboard_url %>" class="Header-settingsItem">Back to Map Library</a>
-</li>
+<div class="left header_block">
+    <ul class="actions">
+        <li>
+            <a href="#/save-map" class="Button add_new_layer js-save-map">Save a Copy to Make Changes</a>
+        </li>
+        <li>
+            <a href="<%- dashboard_url %>" class="Button add_new_layer">Back to Map Library</a>
+        </li>
+    </ul>
+</div>
 
-<li class="Header-settingsItem u-hideOnTablet">
-  Map Title
-</li>
-
-<li class="Header-settingsItem u-hideOnTablet">
-  <%- vis_name %>
-</li>
-
+<div class="right header_block">
+    <ul class="options">
+        <li>
+          Map Title
+        </li>
+        <li>
+          <%- vis_name %>
+        </li>
+    </ul>
+</div>
