--- a/app/views/admin/visualizations/sample_map.html.erb
+++ b/app/views/admin/visualizations/sample_map.html.erb
@@ -6,7 +6,7 @@
 <%= content_for(:body_class) do %>SampleMap<% end %>
 
 <%= content_for(:css) do %>
-  <%= stylesheet_link_tag 'cartodb', 'common', 'public_map', 'editor' %>
+  <%= stylesheet_link_tag 'cartodb', 'old_common_without_core', 'common', 'public_map', 'editor', 'map' %>
 <% end %>
 
 <%= content_for(:content) do %>
