--- a/lib/assets/javascripts/cartodb/public_common/user_settings_template.jst.ejs
+++ b/lib/assets/javascripts/cartodb/public_common/user_settings_template.jst.ejs
@@ -1,14 +1,13 @@
 <li class="Header-settingsItem u-hideOnTablet">
-  Map Title
+  <a href="<%- mapsUrl %>" class="Header-settingsLink">Maps</a>
 </li>
 
 <li class="Header-settingsItem u-hideOnTablet">
-  International Factories
+  <a href="<%- datasetsUrl %>" class="Header-settingsLink">Datasets</a>
 </li>
 
-
 <li class="Header-settingsItem Header-settingsItem--avatar">
-  <button class="UserAvatar js-save-map">
+  <button class="UserAvatar js-dropdown-target">
     <img src="<%- avatarUrl %>" class="UserAvatar-img UserAvatar-img--medium js-user-avatar-img" />
   </button>
 </li>
