feture protect bbg_disable_sample_maps

--- a/lib/assets/javascripts/cartodb/dashboard/views/filters.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/filters.jst.ejs
@@ -36,7 +36,7 @@
               <% } %>
             </a>
           </li>
-          <% if (isMaps) { %>
+          <% if (isMaps && $.inArray("bbg_disable_sample_maps", user_data.feature_flags) === -1) { %>
           <li class="Filters-typeItem">
             <a class="Filters-typeLink js-link <%- samples ? 'is-selected' : '' %>" href="<%- currentDashboardUrl.sampleItems() %>">
               Samples
