--- a/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
@@ -1,18 +1,18 @@
 <%
-  var dashboardUrl = router.currentDashboardUrl();
-  var routerParams = router.model.attributes;
+  var routerParams = routerModel.attributes;
 %>
+<div class="LeftMenuScrollable">
 <div class="LeftMenuContent">
 <ul>
   <li><div class="MenuItem 
     <%= !(routerParams.category || routerParams.liked || routerParams.imported || routerParams.locked === 'true') ? 'selected' : '' %>
-    " data-params="" data-order="updated_at"><a href="javascript:void(0)">All</a></div></li>
-  <li><div class="MenuItem <%= routerParams.liked ? 'selected' : '' %>" data-params="/liked"><a href="javascript:void(0)">Favorites<a/></div></li>
+    " data-params='{}'><a href="javascript:void(0)">All</a></div></li>
+  <li><div class="MenuItem <%= routerParams.liked ? 'selected' : '' %>" data-params='{"liked":true}'><a href="javascript:void(0)">Favorites<a/></div></li>
   <% if (content_type == "datasets") { %>
-    <li><div class="MenuItem <%= routerParams.imported ? 'selected' : '' %>" data-params="/imported"><a href="javascript:void(0)">Recently Used</a></div></li>
+    <li><div class="MenuItem <%= routerParams.imported ? 'selected' : '' %>" data-params='{"imported": true}'><a href="javascript:void(0)">Recently Used</a></div></li>
   <% } else { %>
-    <li><div class="MenuItem <%= routerParams.locked === 'true' ? 'selected' : '' %>" data-params="/locked"><a href="javascript:void(0)">Locked</a></div></li>
-    <li><div class="MenuItem" data-params="/samples"><a href="javascript:void(0)">Sample Maps</a></div></li>
+    <li><div class="MenuItem <%= routerParams.locked === 'true' ? 'selected' : '' %>" data-params='{"locked": true}'><a href="javascript:void(0)">Locked</a></div></li>
+    <li><div class="MenuItem" data-params='{"samples": true}'><a href="javascript:void(0)">Sample Maps</a></div></li>
   <% } %>
   <% if (content_type == "datasets") { %>
     <li class="blp-navigator-category">
@@ -34,7 +34,7 @@
         }
       %>
       <li>
-        <div class="MenuItem <%- selected %> <%- expanded %>" data-category="<%- categoryId %>">
+        <div class="MenuItem <%- selected %> <%- expanded %>" data-params='{"category": true, "page": <%- categoryId %>}'>
           <div class="<%- parentClass %>"></div>
           <a href="javascript:void(0)"><%- category.get('name') %></a>
           <div class="CategoryCount"><%- category.get('count') %></div>
@@ -44,7 +44,7 @@
           <% for (var s = 0, sl = subCategories.length; s < sl; ++s) { %>
             <% var subCategory = subCategories[s]; %>
             <li class="SubCategory">
-              <div class="MenuItem <%- (subCategory.id == current_category ? "selected" : "") %>" data-category="<%- subCategory.id %>"><a href="javascript:void(0)"><%- subCategory.name %></a><div class="CategoryCount"><%- subCategory.count %></div></div>
+              <div class="MenuItem <%- (subCategory.id == current_category ? "selected" : "") %>" data-params='{"category": true, "page": <%- subCategory.id %>}'><a href="javascript:void(0)"><%- subCategory.name %></a><div class="CategoryCount"><%- subCategory.count %></div></div>
             </li>
           <% } %>
           </ul>
@@ -54,4 +54,5 @@
   </ul>
   <% } %>
 </ul>
+</div>
 </div>
