Expose lock pan and zoom as map properties

--- a/lib/assets/javascripts/cartodb/table/views/map_options_dropdown.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/views/map_options_dropdown.jst.ejs
@@ -1,4 +1,6 @@
 <% var bbgProUI = $.inArray("bbg_pro_ui", user_data.feature_flags) !== -1; %>
+<% var profAttrs = new cdb.admin.ProfileAttributes(profile_attributes); %>
+<% console.log(profAttrs); %>
 
 <div class="title"><h2>Display Options</h2></div>
 <ul class="options switches">
@@ -15,5 +17,11 @@
     <li class="fullscreen"><p>Fullscreen</p></li>
     <li class="inset_map"><p>Inset map</p></li>
     <li class="logo"><p>CartoDB Logo</p></li>
+  <% } %>
+  <% if (profAttrs.hasAttribute("enableLockPan") && profAttrs.getAttribute("enableLockPan")) { %>
+    <li class="lock_pan"><p>Lock Pan</p></li>
+  <% } %>
+  <% if (profAttrs.hasAttribute("enableLockZoom") && profAttrs.getAttribute("enableLockZoom")) { %>
+    <li class="lock_zoom"><p>Lock Zoom</p></li>
   <% } %>
 </ul>
