Add Columns alias names to merge tables view

--- a/lib/assets/javascripts/cartodb/common/dialogs/merge_datasets/column_selector.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/merge_datasets/column_selector.jst.ejs
@@ -7,10 +7,25 @@
         </div>
       </div>
     <% } %>
-    <div>
-      <div class="DefaultTitle"><%- columnName %></div>
-      <p class="DefaultParagraph DefaultParagraph--tertiary"><%- columnType %></p>
-    </div>
+    <% if (aliasUser) { %>
+      <div>
+        <div class="DefaultTitle"><%- columnAlias %></div>
+        <div class="DefaultTitle"><%- columnName %></div>
+        <p class="DefaultParagraph DefaultParagraph--tertiary"><%- columnType %></p>
+      </div>
+    <% } else { %>
+      <% if (columnAlias) { %>
+        <div>
+          <div class="DefaultTitle"><%- columnAlias %></div>
+          <p class="DefaultParagraph DefaultParagraph--tertiary"><%- columnType %></p>
+        </div>
+      <% } else {%>
+        <div>
+          <div class="DefaultTitle"><%- columnName %></div>
+          <p class="DefaultParagraph DefaultParagraph--tertiary"><%- columnType %></p>
+        </div>
+      <% } %>
+    <% } %>
   </div>
   <div>
     <% if (selectorType === 'switch') { %>
