Add column alias names and user to select view

--- a/lib/assets/javascripts/cartodb/common/dialogs/merge_datasets/column_merge/select_columns.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/merge_datasets/column_merge/select_columns.jst.ejs
@@ -14,8 +14,19 @@
               </div>
             </div>
             <div>
-              <div class="DefaultTitle"><%- leftKeyColumn.get('name') %></div>
-              <p class="DefaultParagraph DefaultParagraph--tertiary"><%- leftKeyColumn.get('type') %></p>
+              <% if (aliasUser) { %>
+                <div class="DefaultTitle"><%- leftKeyColumnAlias %></div>
+                <div class="DefaultTitle"><%- leftKeyColumnName %></div>
+                <p class="DefaultParagraph DefaultParagraph--tertiary"><%- leftKeyColumnType %></p>  
+              <% } else { %>
+                <% if (leftKeyColumnAlias) { %>
+                  <div class="DefaultTitle"><%- leftKeyColumnAlias %></div>
+                  <p class="DefaultParagraph DefaultParagraph--tertiary"><%- leftKeyColumnType %></p>
+                <% } else { %>
+                  <div class="DefaultTitle"><%- leftKeyColumnName %></div>
+                  <p class="DefaultParagraph DefaultParagraph--tertiary"><%- leftKeyColumnType %></p>
+                <% } %>
+              <% } %>
             </div>
           </div>
         </div>
@@ -38,8 +49,19 @@
               </div>
             </div>
             <div>
-              <div class="DefaultTitle"><%- rightKeyColumn.get('name') %></div>
-              <p class="DefaultParagraph DefaultParagraph--tertiary"><%- rightKeyColumn.get('type') %></p>
+              <% if (aliasUser) { %>
+                <div class="DefaultTitle"><%- rightKeyColumnAlias %></div>
+                <div class="DefaultTitle"><%- rightKeyColumnName %></div>
+                <p class="DefaultParagraph DefaultParagraph--tertiary"><%- rightKeyColumnType %></p>  
+              <% } else { %>
+                <% if (rightKeyColumnAlias) { %>
+                  <div class="DefaultTitle"><%- rightKeyColumnAlias %></div>
+                  <p class="DefaultParagraph DefaultParagraph--tertiary"><%- rightKeyColumnType %></p>
+                <% } else { %>
+                  <div class="DefaultTitle"><%- rightKeyColumnName %></div>
+                  <p class="DefaultParagraph DefaultParagraph--tertiary"><%- rightKeyColumnType %></p>
+                <% } %>
+              <% } %>
             </div>
           </div>
         </div>
