--- a/lib/assets/javascripts/cartodb/table/views/export_image_view.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/views/export_image_view.jst.ejs
@@ -6,7 +6,7 @@
   <% if (show_title || show_description) { %>
   <div class="ExportHelper ExportHelper--header">
     <% if (show_title) { %>
-    <h3 class="ExportHelperTitle js-title"><%- title %></h3>
+    <div class="ExportHelperTitle js-title"><%- title %></div>
     <% } %>
     <% if (show_description) { %>
     <p class="ExportHelperDescription js-description"><%= cdb.core.sanitize.html(description) %></p>
