--- a/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
@@ -36,6 +36,48 @@
     <li><div class="MenuItem MenuItem-samples <%= routerParams.samples ? 'selected' : '' %>" data-params='{"samples": true, "shared": "no"}'>
       <a href="javascript:void(0)">Sample Maps</a>
     </div></li>
+    <ul class="CategoryTree">
+      <% for (var i = 0, l = categories.length; i < l; ++i) { %>
+        <%
+          var category = categories[i];
+          var categoryId = category.get('id');
+          var subCategories = category.get('children');
+          var selected = "";
+          var expanded = "";
+          var parentClass = subCategories.length > 0 ? "ParentChevron" : "ChevronPlaceholder";
+          if (categoryId == current_category) {
+            selected = "selected";
+          }
+          if (category.get('expanded') || _.findWhere(subCategories, {id: current_category})) {
+            expanded = "expanded";
+          }
+        %>
+        <li>
+          <div class="MenuItem <%- selected %> <%- expanded %>" data-category="<%- categoryId %>" data-params='{"samples": true, "shared": "no", "category": true, "page": <%= category.get('name') == featuredSamplesName ? (samplesParentCategory + ', "liked": true') : categoryId %>}'>
+            <div class="<%- parentClass %>"></div>
+            <a href="javascript:void(0)"><%- category.get('name') %></a>
+            <% if (countsReady) { %>
+              <div class="CategoryCount"><%- counts.categories[categoryId] %></div>
+            <% } %>
+          </div>
+          <% if (subCategories.length > 0) { %>
+            <ul class="SubCategories <%- expanded %> SubCategories-<%- categoryId %>">
+            <% for (var s = 0, sl = subCategories.length; s < sl; ++s) { %>
+              <% var subCategory = subCategories[s]; %>
+              <li class="SubCategory">
+                <div class="MenuItem <%- (subCategory.id == current_category ? "selected" : "") %>" data-params='{"samples": true, "shared": "no", "category": true, "page": <%- subCategory.id %>}'>
+                  <a href="javascript:void(0)"><%- subCategory.name %></a>
+                  <% if (countsReady) { %>
+                    <div class="CategoryCount"><%- counts.categories[subCategory.id] %></div>
+                  <% } %>
+                  </div>
+              </li>
+            <% } %>
+            </ul>
+          <% } %>
+        </li>
+      <% } %>
+    </ul>
   <% } %>
   <% if (content_type == "datasets") { %>
     <li class="blp-navigator-category">
