Re-enable AVMM export

--- a/lib/assets/javascripts/cartodb/common/dialogs/static_image/export_to_avmm_view.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/static_image/export_to_avmm_view.jst.ejs
@@ -1,41 +1,13 @@
+<% var profAttrs = cdb.admin.ProfileAttributes.load(); %>
+<% var jumpToAVMMBaseUrl = profAttrs.get('jumpToAVMMBaseUrl'); %>
 <div class="u-inner">
   <div class="Dialog-header">
     <div class="Dialog-headerIcon Dialog-headerIcon--neutral">
       <i class="CDB-IconFont CDB-IconFont-ray"></i>
     </div>
-    <p class="Dialog-headerTitle">Saved to AVMM</p>
-    <div class="Dialog-body">
-      <p><img src="<%- response.content %>"
-              style="max-width:33vw; max-height:50vh;"></p>
-    </div>
-    <div class="Dialog-body">
-      <div class="Form">
-        <div class="Form-row">
-          <div class="Form-rowLabel">
-            Title:
-          </div>
-          <div class="Form-rowData">
-            <%- response.title %>
-          </div>
-        </div>
-        <div class="Form-row">
-          <div class="Form-rowLabel">
-            ID:
-          </div>
-          <div class="Form-rowData avmm-id">
-            1234567890
-          </div>
-          <button class="Button Button--secondary avmm-copy-id" style="position:relative">
-            <span>
-              copy
-            </span>
-          </button>
-        </div>
-    </div>
-  </div>
-  <div class="Dialog-footer Dialog-footer--simple">
-    <button class="Button Button--secondary Dialog-footerBtn cancel">
-      <span>close</span>
-    </button>
+    <p class="Dialog-headerTitle">
+      Saved to<a href="<%= jumpToAVMMBaseUrl + '/AVMM%20' + response.content[0].html[0] %>">
+        {AVMM <%= response.content[0].html[0] %> &lt;GO&gt;}</a>.
+    </p>
   </div>
 </div>
