sample maps counts, menu state fixes, category initialization script

--- a/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
@@ -13,7 +13,7 @@
         <div class="CategoryCount"><%- counts.types.all %></div>
       <% } %>
     </div></li>
-  <li><div class="MenuItem <%= routerParams.liked ? 'selected' : '' %>" data-params='{"liked":true}'>
+  <li><div class="MenuItem <%= (!routerParams.samples && routerParams.liked) ? 'selected' : '' %>" data-params='{"liked":true}'>
     <a href="javascript:void(0)">Favorites<a/>
     <% if (countsReady) { %>
       <div class="CategoryCount"><%- counts.types.liked %></div>
@@ -33,10 +33,20 @@
         <div class="CategoryCount"><%- counts.types.locked %></div>
       <% } %>
     </div></li>
-    <li><div class="MenuItem MenuItem-samples <%= routerParams.samples ? 'selected' : '' %>" data-params='{"samples": true, "shared": "no"}'>
+    <li><div class="MenuItem MenuItem-samples <%= (routerParams.samples && !routerParams.liked && !routerParams.category) ? 'selected' : '' %>" data-params='{"samples": true, "shared": "no"}'>
       <a href="javascript:void(0)">Sample Maps</a>
+      <% if (countsReady) { %>
+        <div class="CategoryCount"><%- counts.sample_types.all %></div>
+      <% } %>
     </div></li>
     <ul class="CategoryTree">
+      <li><div class="MenuItem <%= (routerParams.samples && routerParams.liked) ? 'selected' : '' %>" data-params='{"samples": true, "shared": "no", "page": <%= samplesParentCategory %>, "liked": true}'>
+        <div class="ChevronPlaceholder"></div>
+        <a href="javascript:void(0)">Featured Maps</a>
+        <% if (countsReady) { %>
+          <div class="CategoryCount"><%- counts.sample_types.liked %></div>
+        <% } %>
+      </div></li>
       <% for (var i = 0, l = categories.length; i < l; ++i) { %>
         <%
           var category = categories[i];
@@ -53,7 +63,7 @@
           }
         %>
         <li>
-          <div class="MenuItem <%- selected %> <%- expanded %>" data-category="<%- categoryId %>" data-params='{"samples": true, "shared": "no", "category": true, "page": <%= category.get('name') == featuredSamplesName ? (samplesParentCategory + ', "liked": true') : categoryId %>}'>
+          <div class="MenuItem <%- selected %> <%- expanded %>" data-category="<%- categoryId %>" data-params='{"samples": true, "shared": "no", "category": true, "page": <%= categoryId %>}'>
             <div class="<%- parentClass %>"></div>
             <a href="javascript:void(0)"><%- category.get('name') %></a>
             <% if (countsReady) { %>
