fix category selection visibility

--- a/lib/assets/javascripts/cartodb/table/menu_modules/edit_vis_metadata/edit_vis_form.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/menu_modules/edit_vis_metadata/edit_vis_form.jst.ejs
@@ -55,7 +55,7 @@
         <li class="title"><p>Allow export</p><div class="exportable-switch"></div></li>
         <li class="title"><p>Allow Geometry export</p><div class="export_geom-switch"></div></li>
 <% } %>
-<% if (!isDataset && isSampleMapsUser) { %>
+<% if (isDataset || isSampleMapsUser) { %>
         <li class="title"><p>Category</p><div class="category-list"></div></li>
         <li class="title"><p>Sub-category</p><div class="subcategory-list"></div></li>
 <% } %>
