Fix typo DarkGrey6 -> nGrey6

--- a/app/assets/stylesheets/dashboard/left-menu.css.scss
+++ b/app/assets/stylesheets/dashboard/left-menu.css.scss
@@ -7,9 +7,8 @@
   flex-shrink: 0;
   width: 200px;
   border-right: 1px solid $Black;
-  background-color: $DarkGrey6;
-
-} 
+  background-color: $nGrey6;
+}
 
 .LeftMenuContent {
   .MenuItem {
