Fix typo Grey3 -> nGrey3

--- a/app/assets/stylesheets/dashboard/left-menu.css.scss
+++ b/app/assets/stylesheets/dashboard/left-menu.css.scss
@@ -14,7 +14,7 @@
   .MenuItem {
     cursor:pointer;
     padding: 0px 12px;
-    color: $Grey3;
+    color: $nGrey3;
     line-height: 23px;
     &:hover {
       background-color: #292929;
@@ -77,7 +77,7 @@
 .blp-navigator-item {
   cursor: pointer;
   padding: 0px 12px;
-  color: $Grey3;
+  color: $nGrey3;
   line-height: 23px;
 
   &:hover {
