Typo Grey1 -> nGrey1

--- a/app/assets/stylesheets/table/table_panel/layer-views-panels/filters_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel/layer-views-panels/filters_panel.css.scss
@@ -553,7 +553,7 @@
             padding: 2px 4px;
             border:none;
             background:none;
-            color:$Grey1;
+            color:$nGrey1;
           }
 
           &:hover .remove-item { @include opacity(1); }
