--- a/lib/assets/javascripts/cartodb/common/templates/fail.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/templates/fail.jst.ejs
@@ -6,5 +6,5 @@
   <% if (msg) { %>
     <p class="DefaultParagraph"><%= msg %></p>
   <% } %>
-  <p class="DefaultParagraph">If the problem persists contact us at <a class="js-mail-link" href="mailto:support@cartodb.com">support@cartodb.com</a>.</p>
+  <p class="DefaultParagraph">If the problem persists contact Bloomberg Help Desk.</p>
 </div>
