--- a/app/assets/stylesheets/table/header/header_navigation.css.scss
+++ b/app/assets/stylesheets/table/header/header_navigation.css.scss
@@ -33,11 +33,11 @@
   // Global error element
   div.globalerror {
     position: absolute;
-    top:17px;
+    top:60px;
     left:0;
     bottom:0;
     width:100%;
-    height:30px;
+    height:35px;
     padding:0;
     pointer-events: none;
     overflow:hidden;
@@ -50,15 +50,45 @@
       width:auto;      
       line-height:30px;
       padding: 0px 12px;
+      color: $nAmber5;
+      background-color: $nGrey14;
+      border: 1px solid $nGrey7;
+
+      @keyframes blink {
+        0% { opacity: 0.1; }
+        20% { opacity: 1.0; }
+        100% { opacity: 0.1; }
+      }
 
       &.error {
-        color: $nRed4;
-        background: $White;
+        color: $SaturatedRed;
       }
 
       &.warn {
-        color: #555;
-        background-color: rgba(#FFFFBF, 0.90);
+        color: $SaturatedOrange;
+      }
+
+      &.loading {
+        width: 100px;
+
+        span {
+          animation-name: blink;
+          animation-duration: 2s;
+          animation-iteration-count: infinite;
+          animation-fill-mode: both;
+        }
+        span:nth-child(2) {
+          animation-delay: .1s;
+        }
+        span:nth-child(3) {
+          animation-delay: .2s;
+        }
+        span:nth-child(4) {
+          animation-delay: .3s;
+        }
+        span:nth-child(5) {
+          animation-delay: .4s;
+        }
       }
 
       img {
