--- a/lib/assets/javascripts/cartodb/old_common/views/notifications/loading.jst.ejs
+++ b/lib/assets/javascripts/cartodb/old_common/views/notifications/loading.jst.ejs
@@ -1,1 +1,1 @@
-<p class='loading'><img src="<%- cdb.config.get('assets_url') %>/images/layout/loader-white.gif"/><%- text %></p>
+<p class='loading'><%- text %><span>.</span><span>.</span><span>.</span><span>.</span><span>.</span></p>
