--- a/lib/assets/javascripts/cartodb/table/views/export_image_view.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/views/export_image_view.jst.ejs
@@ -9,7 +9,7 @@
     <div class="ExportHelperTitle js-title"><%- title %></div>
     <% } %>
     <% if (show_description) { %>
-    <p class="ExportHelperDescription js-description"><%= cdb.core.sanitize.html(description) %></p>
+    <div class="ExportHelperDescription js-description"><%= cdb.core.sanitize.html(description) %></div>
     <% } %>
   </div>
   <% } %>
