use default pointer on li &hover

--- a/app/assets/stylesheets/table/table_panel/layer-views-panels/filters_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel/layer-views-panels/filters_panel.css.scss
@@ -504,7 +504,7 @@
           margin: 0;
 
           &:hover {
-            cursor: pointer;
+            cursor: default;
           }
 
           p {
