--- a/app/views/admin/visualizations/show.html.erb
+++ b/app/views/admin/visualizations/show.html.erb
@@ -12,7 +12,7 @@
     , user_data = <%= safe_js_object current_user.data({ show_api_calls: false }).to_json %>
     , config = <%= safe_js_object frontend_config %>
     , map_data = <%= safe_js_object @visualization.map.public_values.to_json %>
-    , basemaps = <%=raw Cartodb.config[:basemaps].present? ? Cartodb.config[:basemaps].to_json.html_safe: 'null' %>
+    , basemaps = <%=raw @visualization.user.basemaps.to_json.html_safe || 'null' %>
   </script>
 
   <% content_for(:js) do %>
