Update georeferencing labels

--- a/lib/assets/javascripts/cartodb/common/dialogs/georeference/georeference.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/georeference/georeference.jst.ejs
@@ -7,7 +7,7 @@
           <div class="Dialog-headerIcon Dialog-headerIcon--neutral">
             <i class="CDB-IconFont CDB-IconFont-marker"></i>
           </div>
-          <p class="Dialog-headerTitle">Georeference your dataset</p>
+          <p class="Dialog-headerTitle">Georeference data</p>
           <p class="Dialog-headerText">Transform your data into coordinates</p>
         </li>
       </ul>
