--- a/lib/assets/javascripts/cartodb/common/dialogs/georeference/default_footer.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/georeference/default_footer.jst.ejs
@@ -5,10 +5,16 @@
     <div class="CreateDialog-footerInner">
       <div class="CreateDialog-footerInfo">
         <div class="Checkbox js-force-all-rows">
+          <% if (toggleForceAllRowsEnabled) { %>
           <button class="Checkbox-input"></button>
           <label class="Checkbox-label">
-            Override all values. Geocode all your rows, even those with geometry data.
+            Check to georeference all rows, overwriting any previously georeferenced data.
           </label>
+          <% } else { %>
+          <label class="Checkbox-label">
+            Georeference all rows, overwriting any previously georeferenced data.
+          </label>
+          <% } %>
         </div>
       </div>
       <div class="CreateDialog-footerActions">
