hide SHOW details button from successful import/upload/georeference status popups

--- a/lib/assets/javascripts/cartodb/common/background_polling/views/geocodings/background_geocoding_item.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/background_polling/views/geocodings/background_geocoding_item.jst.ejs
@@ -19,7 +19,9 @@
         <%- realRowsFormatted %> <%- realRowsPluralize %> geocoded <% if (tableName) { %>in <%- tableName %> dataset<% } %>
       <% } %>
     </div>
-    <button type="button" class="Button Button-importShowDetails js-info">SHOW</button>
+    <% if (showSuccessDetailsButton) { %>
+      <button type="button" class="Button Button-importShowDetails js-info">SHOW</button>
+    <% } %>
   <% } %>
   <button class="ImportItem-closeButton js-close">
     <i class="CDB-IconFont CDB-IconFont-close ImportItem-closeButtonIcon"></i>
