fixes for bbg_pro_ui user dataset table and dashboard toolbar UI state issues

--- a/lib/assets/javascripts/cartodb/dashboard/views/datasets_table_item.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/datasets_table_item.jst.ejs
@@ -8,9 +8,10 @@
       var qLen = q.length;
       title = title.substr(0, startPos) + '<span class="found-sub">' + title.substr(startPos, qLen) + '</span>' + title.substr(startPos + qLen);
     }
+  %>
 
-    if (type == "table" && $.inArray("bbg_pro_ui", user_data.feature_flags) !== -1) { %>
-      <a href="<%- datasetUrl %>" class="DatasetTitle-link"><%= title %></a>
+  <% if (editable && type == "table" && $.inArray("bbg_pro_ui", user_data.feature_flags) !== -1) { %>
+    <a href="<%- datasetUrl %>" class="DatasetTitle-link"><%= title %></a>
   <% } else { %>
     <%= title %>
   <% } %>
