Update georef labels; hide warning message

--- a/lib/assets/javascripts/cartodb/common/dialogs/georeference/default_content_header.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/georeference/default_content_header.jst.ejs
@@ -1,6 +1,10 @@
 <div class="ImportPanel-header">
   <h3 class="DefaultTitle">
-    <%- title %>
+    <% if (typeof titleHtml !== 'undefined') { %>
+      <%= titleHtml %>
+    <% } else { %>
+      <%- title %>
+    <% } %>
   </h3>
   <p class="ImportPanel-headerDescription ImportPanel-headerDescription--withoutWidth">
     <%- desc %>
