Update geocoding result view

--- a/lib/assets/javascripts/cartodb/common/background_polling/views/geocodings/geocoding_success_details.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/background_polling/views/geocodings/geocoding_success_details.jst.ejs
@@ -13,20 +13,24 @@
 
 <% if (processableRows > realRows) { %>
   <div class="Dialog-body Dialog-resultsBody">
-    <span class="Dialog-resultsBodyIcon NavButton ">?</span>
     <div class="Dialog-resultsBodyTexts">
       <p class="DefaultParagraph">
-        Rows that are not geocoded could have errors on their column values, or just doesn’t exist in our data.
-        Try geocoding again and check the "override all values" to try again.
-        <% if (!googleUser) { %>
-          Unsuccessful rows don't count against your quota, so we encourage you to take a look and try again.
+        Some rows could not be geocoded. This could be due to unrecognized address formatting,
+        unknown addresses or locations, or missing country and or state/province information.
+        To try geocoding again with different settings, select <b>Georeference</b> from the
+        <b>Actions</b> menu in the map view.
+        <% if (!googleUser && showCostInfo) { %>
+          <p class="DefaultParagraph">
+            <br/>
+            Note that unsuccessful rows will not count against your geocoding quota.
+          </p>
         <% }%>
       </p>
     </div>
   </div>
 <% } %>
 
-<% if (!googleUser && hasPrice) { %>
+<% if (!googleUser && hasPrice && showCostInfo) { %>
   <div class="Dialog-body Dialog-resultsBody">
     <div class="Dialog-resultsBodyIcon LayoutIcon <%- price > 0 ? 'LayoutIcon--warning' :  'LayoutIcon--positive' %>">
       <span class="CDB-IconFont CDB-IconFont-dollar CDB-IconFont--super"></span>
