Hide column georeference option

--- a/lib/assets/javascripts/cartodb/table/views/table_header_options.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/views/table_header_options.jst.ejs
@@ -22,7 +22,9 @@
   <% if (reserved_column !== true && isPublic !== true && !in_sql_view) { %>
     <li><a class="small rename_column" href="#rename">Rename</a></li>
     <li><a class="small change_data_type" href="#change_type">Change data type...</a></li>
-    <li><a class="small georeference" href="#georeference">Georeference...</a></li>
+    <% if (columnGeorefEnabled) { %>
+      <li><a class="small georeference" href="#georeference">Georeference...</a></li>
+    <% } %>
     <li><a class="small add_new_column" href="#add_column">Add Column</a></li>
   <% } %>
   <% if (isPublic !== true) { %>
