Update georef background bolling labels

--- a/lib/assets/javascripts/cartodb/common/background_polling/views/geocodings/geocoding_no_result_details.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/background_polling/views/geocodings/geocoding_no_result_details.jst.ejs
@@ -3,12 +3,28 @@
     <i class="CDB-IconFont CDB-IconFont-<%- geometryType && geometryType === "point" ? 'streets' : 'globe' %>"></i>
     <span class="Badge Badge--negative">!</span>
   </div>
-  <p class="Dialog-headerTitle">No rows were georeferenced</p>
-  <p class="Dialog-headerText Dialog-headerText--centered Dialog-narrowerContent">
-    These rows contained empty values or perhaps we just didn't know what the values meant.
-    We encourage you to take a look and try again.
-  </p>
+  <p class="Dialog-headerTitle"><%- realRows || 0 %> out of <%- processableRows || 0 %> were georeferenced</p>
 </div>
+
+<% if (processableRows > realRows) { %>
+  <div class="Dialog-body Dialog-resultsBody">
+    <div class="Dialog-resultsBodyTexts">
+      <p class="DefaultParagraph">
+        Some rows could not be geocoded. This could be due to unrecognized address formatting,
+        unknown addresses or locations, or missing country and or state/province information.
+        To try geocoding again with different settings, select <b>Georeference</b> from the
+        <b>Actions</b> menu in the map view.
+        <% if (!googleUser && showCostInfo) { %>
+          <p class="DefaultParagraph">
+            <br/>
+            Note that unsuccessful rows will not count against your geocoding quota.
+          </p>
+        <% }%>
+      </p>
+    </div>
+  </div>
+<% } %>
+
 <div class="Dialog-footer Dialog-footer--simple u-inner Dialog-narrowerContent">
   <button class="cancel Button Button--secondary <%- showGeocodingDatasetURLButton ? 'Dialog-footerBtn' : '' %>">
     <span>close</span>
