--- a/app/views/shared/signup_confirmation.html.erb
+++ b/app/views/shared/signup_confirmation.html.erb
@@ -10,7 +10,7 @@
   </script>
 <% end %>
 
-<div class="Sessions" style="<%= background %>">
+<div class="Sessions">
   <div class="Sessions-content">
     <div class="Sessions-inner">
       <div class="u-inner">
